fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ a.cart:active span {
   width: 880px;
   min-height: 320px;
   margin: 0 auto;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .slide {
